--- a/processador8bits.qsf
+++ b/processador8bits.qsf
@@ -19,7 +19,7 @@
 #
 # Quartus Prime
 # Version 21.1.1 Build 850 06/23/2022 SJ Lite Edition
-# Date created = 14:39:56  October 08, 2022
+# Date created = 08:54:25  October 16, 2022
 #
 # -------------------------------------------------------------------------- #
 #
@@ -37,43 +37,184 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY Processador8Bits
+
+# Project-Wide Assignments
+# ========================
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 21.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:39:56  OCTOBER 08, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION "21.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+
+# Classic Timing Assignments
+# ==========================
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+
+# Analysis & Synthesis Assignments
+# ================================
+set_global_assignment -name FAMILY "Cyclone V"
+set_global_assignment -name TOP_LEVEL_ENTITY Processador8Bits
+set_global_assignment -name PROJECT_IP_REGENERATION_POLICY ALWAYS_REGENERATE_IP
+set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Precision Synthesis"
+
+# Fitter Assignments
+# ==================
+set_global_assignment -name DEVICE 5CEFA7F31I7
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR "-1"
+set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
+set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
+
+# EDA Netlist Writer Assignments
+# ==============================
+set_global_assignment -name EDA_SIMULATION_TOOL "Questa Intel FPGA (VHDL)"
+
+# Assembler Assignments
+# =====================
+set_global_assignment -name AUTO_RESTART_CONFIGURATION OFF
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+
+# Power Estimation Assignments
+# ============================
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+
+# start EDA_TOOL_SETTINGS(eda_simulation)
+# ---------------------------------------
+
+	# EDA Netlist Writer Assignments
+	# ==============================
+set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+
+# end EDA_TOOL_SETTINGS(eda_simulation)
+# -------------------------------------
+
+# start EDA_TOOL_SETTINGS(eda_design_synthesis)
+# ---------------------------------------------
+
+	# Analysis & Synthesis Assignments
+	# ================================
+set_global_assignment -name EDA_LMF_FILE mentor.lmf -section_id eda_design_synthesis
+set_global_assignment -name EDA_INPUT_DATA_FORMAT VQM -section_id eda_design_synthesis
+
+# end EDA_TOOL_SETTINGS(eda_design_synthesis)
+# -------------------------------------------
+
+# start EDA_TOOL_SETTINGS(eda_board_design_boundary_scan)
+# -------------------------------------------------------
+
+	# EDA Netlist Writer Assignments
+	# ==============================
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
+
+# end EDA_TOOL_SETTINGS(eda_board_design_boundary_scan)
+# -----------------------------------------------------
+
+# start EDA_TOOL_SETTINGS(eda_board_design_timing)
+# ------------------------------------------------
+
+	# EDA Netlist Writer Assignments
+	# ==============================
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
+
+# end EDA_TOOL_SETTINGS(eda_board_design_timing)
+# ----------------------------------------------
+
+# start EDA_TOOL_SETTINGS(eda_board_design_symbol)
+# ------------------------------------------------
+
+	# EDA Netlist Writer Assignments
+	# ==============================
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
+
+# end EDA_TOOL_SETTINGS(eda_board_design_symbol)
+# ----------------------------------------------
+
+# start EDA_TOOL_SETTINGS(eda_board_design_signal_integrity)
+# ----------------------------------------------------------
+
+	# EDA Netlist Writer Assignments
+	# ==============================
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
+
+# end EDA_TOOL_SETTINGS(eda_board_design_signal_integrity)
+# --------------------------------------------------------
+
+# ----------------------------
+# start ENTITY(MemoriaRAM.bdf)
+
+	# Analysis & Synthesis Assignments
+	# ================================
 set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Design Compiler" -entity MemoriaRAM.bdf
+
+	# start EDA_TOOL_SETTINGS(eda_design_synthesis)
+	# ---------------------------------------------
+
+		# Analysis & Synthesis Assignments
+		# ================================
 set_global_assignment -name EDA_INPUT_GND_NAME GND -entity MemoriaRAM.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_INPUT_VCC_NAME VDD -entity MemoriaRAM.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_LMF_FILE altsyn.lmf -entity MemoriaRAM.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_SHOW_LMF_MAPPING_MESSAGES OFF -entity MemoriaRAM.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY OFF -entity MemoriaRAM.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_INPUT_DATA_FORMAT EDIF -entity MemoriaRAM.bdf -section_id eda_design_synthesis
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim (Verilog)"
-set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name PROJECT_IP_REGENERATION_POLICY ALWAYS_REGENERATE_IP
+
+	# end EDA_TOOL_SETTINGS(eda_design_synthesis)
+	# -------------------------------------------
+
+# end ENTITY(MemoriaRAM.bdf)
+# --------------------------
+
+# ------------------------------
+# start ENTITY(Processador8Bits)
+
+	# start DESIGN_PARTITION(Top)
+	# ---------------------------
+
+		# Incremental Compilation Assignments
+		# ===================================
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+
+	# end DESIGN_PARTITION(Top)
+	# -------------------------
+
+# end ENTITY(Processador8Bits)
+# ----------------------------
+
+# ----------------------------------
+# start ENTITY(Processador8Bits.bdf)
+
+	# Analysis & Synthesis Assignments
+	# ================================
 set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Design Compiler" -entity Processador8Bits.bdf
+
+	# start EDA_TOOL_SETTINGS(eda_design_synthesis)
+	# ---------------------------------------------
+
+		# Analysis & Synthesis Assignments
+		# ================================
 set_global_assignment -name EDA_INPUT_GND_NAME GND -entity Processador8Bits.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_INPUT_VCC_NAME VDD -entity Processador8Bits.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_LMF_FILE altsyn.lmf -entity Processador8Bits.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_SHOW_LMF_MAPPING_MESSAGES OFF -entity Processador8Bits.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_RUN_TOOL_AUTOMATICALLY OFF -entity Processador8Bits.bdf -section_id eda_design_synthesis
 set_global_assignment -name EDA_INPUT_DATA_FORMAT EDIF -entity Processador8Bits.bdf -section_id eda_design_synthesis
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name EDA_DESIGN_ENTRY_SYNTHESIS_TOOL "Precision Synthesis"
-set_global_assignment -name EDA_LMF_FILE mentor.lmf -section_id eda_design_synthesis
-set_global_assignment -name EDA_INPUT_DATA_FORMAT VQM -section_id eda_design_synthesis
+
+	# end EDA_TOOL_SETTINGS(eda_design_synthesis)
+	# -------------------------------------------
+
+# end ENTITY(Processador8Bits.bdf)
+# --------------------------------
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH "Frequency Counter TB" -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME "Frequency Counter TB" -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id "Frequency Counter TB"
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME "Frequency Counter TB" -section_id "Frequency Counter TB"
+set_global_assignment -name EDA_TEST_BENCH_FILE SimulationWaveform.vwf -section_id "Frequency Counter TB"
+set_global_assignment -name BOARD "Cyclone V E FPGA Development Kit"
 set_global_assignment -name BDF_FILE ULA_UnidadeLogicaEAritmetica.bdf
 set_global_assignment -name BDF_FILE TMP_RegistradorTemporario.bdf
 set_global_assignment -name BDF_FILE RI_RegistradorInstrucoes.bdf
@@ -86,15 +227,10 @@ set_global_assignment -name BDF_FILE MemoriaRAM.bdf
 set_global_assignment -name BDF_FILE Processador8Bits.bdf
 set_global_assignment -name BDF_FILE ContadorDePrograma.bdf
 set_global_assignment -name BDF_FILE UnidadeDeControle.bdf
-set_global_assignment -name VECTOR_WAVEFORM_FILE SimulationWaveform.vwf
 set_global_assignment -name MIF_FILE ram.mif
 set_global_assignment -name MIF_FILE mapeamento.mif
 set_global_assignment -name MIF_FILE mem_programa.mif
-set_global_assignment -name AUTO_RESTART_CONFIGURATION OFF
-set_global_assignment -name ENABLE_OCT_DONE OFF
-set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
-set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
-set_global_assignment -name USE_CONFIGURATION_DEVICE ON
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name NUM_PARALLEL_PROCESSORS 6
+set_global_assignment -name VECTOR_WAVEFORM_FILE WaveformSoma.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
